--- a/force-app/main/default/classes/CP_SendOnboardingFormMail.cls
+++ b/force-app/main/default/classes/CP_SendOnboardingFormMail.cls
@@ -13,7 +13,7 @@
 * N/A           N/A                     N/A
 * ====================================================================================================
 **/
-public class CP_SendOnboardingFormMail implements TriggerAction.AfterInsert{
+public class CP_SendOnboardingFormMail implements TriggerAction.AfterInsert, TriggerAction.AfterUpdate{
     /**
     * @author Eswar
     * @date 02/02/2023
@@ -31,6 +31,23 @@ public class CP_SendOnboardingFormMail implements TriggerAction.AfterInsert{
          sendOnboardingFormMail(newList);
          System.debug(LoggingLevel.DEBUG, 'CP_SendOnboardingFormMail.afterInsert() : END');       
      }
+    
+/**
+* @author Eswar Tangudu
+* @date 3/28/2023
+* @description After Update
+*
+* CHANGE HISTORY
+* ====================================================================================================
+* DATE          NAME                    DESCRIPTION
+* N/A           N/A                     N/A
+* ====================================================================================================
+**/
+    public void afterUpdate(List<Contact> newList, List<Contact> oldList) {      
+        System.debug(LoggingLevel.DEBUG, 'CP_SendOnboardingFormMail.afterUpdate() : BEGIN');
+        sendOnboardingFormMailAfterUpdate(newList,new Map<Id,Contact>(oldList));
+        System.debug(LoggingLevel.DEBUG, 'CP_SendOnboardingFormMail.afterUpdate() : END');       
+    }
     
     /**
     * @author Eswar
@@ -83,8 +100,53 @@ public class CP_SendOnboardingFormMail implements TriggerAction.AfterInsert{
             applicantRec.ContactId__c = onboardingRecords.ContactId1__c;
             additionalDetailsList.add(applicantRec);
         }
-        insert additionalDetailsList;
+        insert additionalDetailsList; 
     }
+    
+    //--------
+    private void sendOnboardingFormMailAfterUpdate(List<Contact> contactList, Map<Id,Contact> oldMap){
+        
+        List<EMS_EM_Onboarding_Request__c> applicantsList = new List<EMS_EM_Onboarding_Request__c>();
+        List<Contact> applicantsToSendMail = new List<Contact>();
+        Group itGroup = [select Id,Name from Group where  Type = 'Queue' AND NAME = 'TA Team'];
+        Id contRecordTypeId = [Select id from RecordType where sObjectType = 'Contact' and developerName ='Applicant' ].id ;
+        
+        for(Contact contactRec : contactList){
+            if(contactRec.RecordTypeId == contRecordTypeId){
+                Date today = Date.today();
+                Date sobjectDate = contactRec.EMS_EM_JD__c;
+                
+               /* EMS_EM_Onboarding_Request__c applicantRec = new EMS_EM_Onboarding_Request__c();
+                applicantRec.EMS_EM_Personal_Email__c = contactRec.Personal_Email__c;
+                applicantRec.ContactId1__c = contactRec.Id;
+                applicantRec.EMS_EM_First_Name__c = contactRec.FirstName;
+                applicantRec.EMS_EM_Last_Name__c = contactRec.LastName;
+                applicantRec.Phone_Number__c = contactRec.EMS_Phone_Number__c;
+                applicantRec.Date_of_Joining__c = contactRec.EMS_EM_JD__c;
+                applicantRec.Status__c = 'Triggered';
+                applicantsList.add(applicantRec);*/
+                
+                if(contactRec.EMS_EM_JD__c != NULL && today.daysBetween(sobjectDate) < 10 && contactRec.EMS_EM_JD__c >= system.today() &&
+                   (oldMap.get(contactRec.Id).EMS_EM_JD__c == NULL || (oldMap.get(contactRec.Id).EMS_EM_JD__c != contactRec.EMS_EM_JD__c))){
+                    sendEmailToHR(contactRec.Id);
+                    sendEmailToAdminTeam(contactRec.Id);
+                }
+            }   
+        }
+        /*if(applicantsList.size() > 0){
+            insert applicantsList;
+        }*/
+
+        /*List<ems_EM_Additional_Detail__c> additionalDetailsList = new List<ems_EM_Additional_Detail__c>();
+        for(EMS_EM_Onboarding_Request__c onboardingRecords : applicantsList){
+            ems_EM_Additional_Detail__c applicantRec = new ems_EM_Additional_Detail__c();
+            applicantRec.Onboarding_Request__c = onboardingRecords.id;
+            applicantRec.ContactId__c = onboardingRecords.ContactId1__c;
+            additionalDetailsList.add(applicantRec);
+        }
+        insert additionalDetailsList;*/ 
+    }
+    //--------
     
     public static void sendEmailToHR(string recordId){
         List<Messaging.SingleEmailMessage> mails =  new List<Messaging.SingleEmailMessage>(); 
