--- a/force-app/main/default/classes/restrictAssignmentCreationTest.cls
+++ b/force-app/main/default/classes/restrictAssignmentCreationTest.cls
@@ -15,52 +15,53 @@
 **/
 @isTest
 public class restrictAssignmentCreationTest {
-     @testSetup
-    public static void setUp(){
+
+    public static testmethod void createTimesheet(){
+        Id p = [SELECT id FROM profile WHERE name='Employee - Resource(Community)'].id;
+        user userId =[SELECT id FROM User  WHERE profileId =:p AND IsActive = true LIMIT 1];          
+        Resource_Role__c role = TestDataFactory.createResourceRole(true);
+        EMS_LM_Leave__c annualtype = TestDataFactory.createLeaveType('Annual Leave',true);
+        EMS_LM_Leave__c loptype = TestDataFactory.createLeaveType('Loss of Pay',true);
+        EMS_LM_Leave__c bretype = TestDataFactory.createLeaveType('Maternity Leave',true);
+        EMS_LM_Leave__c compofftype = TestDataFactory.createLeaveType('Compensatory Off',true);
+        EMS_LM_Leave__c workfromhome = TestDataFactory.createLeaveType('Work From Home',true);
+        Account acc = TestDataFactory.createAccount(true);
+        Contact con=  TestDataFactory.createResourceContact(acc.id, false);
+        con.EMS_RM_Employee_Id__c = 'CP10235';
+        con.EMS_RM_ApplicantStatus_Update__c ='Active';
+        con.EMS_Phone_Number__c ='0123456789';
+        con.EMS_EM_CAddress_Line_1__c ='Hyd';
+        con.EMS_EM_CA_City__c ='Hyd';
+        con.EMS_EM_CA_State__c ='AP';
+        con.Timesheet_NoNeed__c =false;
+        con.Resource_Role__c = role.Id;
+        con.EMS_TM_User__c =userId.Id;
+        INSERT con;
+        
         EMS_TM_Project__c projectRec = new EMS_TM_Project__c();
         projectRec.EMS_TM_StartDate__c = System.today();
-        projectRec.EMS_TM_Status__c = 'Completed';
-        projectRec.Name = 'project45';
+        projectRec.EMS_TM_EndDate__c = System.today()+10;
+        projectRec.EMS_TM_Status__c = 'completed';
+        projectRec.Name = 'project1';
+        projectRec.Project_Manager__c = con.Id;
         projectRec.Type_Of_Project__c ='Client Projects';
-        insert projectRec;
+        INSERT projectRec;        
+        System.debug('ProjectREC'+projectRec);
         
-        contact contactRec = new contact();
-        contactRec.LastName = 'Sai';
-        contactRec.Official_Mail__c ='saich737@gmail.com';
-        contactRec.Phone = '9603226988';
-        contactRec.EMS_Phone_Number__c = '7997756693';
-        contactRec.RecordTypeId = ContactConstant.RESOURCE_RECORDTYPEID;
-        contactRec.EMS_EM_JD__c = system.today();
-        insert contactRec;
-        
-        
-}
-    public static testmethod void ProjectStausCompleate(){
         test.startTest();
-        EMS_TM_Project__c ProjRco=[SELECT Id,
-                                         EMS_TM_StartDate__c,
-                                         EMS_TM_Status__c,
-                                         Name
-                                         FROM EMS_TM_Project__c 
-                                         WHERE  Name = 'project45' 
-                                         LIMIT 1];
-         contact conRecord =[SELECT Id,
-                            LastName,
-                            EMS_TM_In_Billing__c 
-                            FROM contact 
-                            WHERE lastname ='Sai'
-                            LIMIT 1];
-        
         EMS_TM_Assignment__c assignmentRec = new EMS_TM_Assignment__c();
-        assignmentRec.EMS_TM_EmployeeName__c = conRecord.Id;
-        assignmentRec.EMS_TM_ProjectName_Asgn__c = ProjRco.Id;
+        assignmentRec.EMS_TM_EmployeeName__c = con.Id;
+        assignmentRec.EMS_TM_ProjectName_Asgn__c = projectRec.Id;
         assignmentRec.EMS_TM_StartDate_Asgn__c = system.today();
         assignmentRec.EMS_TM_Billable__c = true;
         try{
-              Insert assignmentRec;            
-            }catch(Exception e){
-            }
-         test.stopTest();                    
+        INSERT assignmentRec; 
+        }catch(Exception e){
+            
+        }
+        test.stopTest();
         
+        List<EMS_TM_Assignment__c> assignmentList =[SELECT Id FROM EMS_TM_Assignment__c LIMIT 1];
+        System.assertEquals(0,assignmentList.size());
     }
 }
