--- a/force-app/main/default/classes/restrictOnlyOneDayOnProbation.cls
+++ b/force-app/main/default/classes/restrictOnlyOneDayOnProbation.cls
@@ -12,7 +12,7 @@
 * N/A           N/A                     N/A
 * ====================================================================================================
 **/
-public class restrictOnlyOneDayOnProbation implements TriggerAction.BeforeInsert {
+public class restrictOnlyOneDayOnProbation implements TriggerAction.BeforeInsert,TriggerAction.BeforeUpdate {
     /**
 * @author Subba Kalavala
 * @date 2/22/2023
@@ -28,6 +28,12 @@ public class restrictOnlyOneDayOnProbation implements TriggerAction.BeforeInsert
         System.debug(LoggingLevel.DEBUG, 'restrictOnlyOneDayOnProbation.beforeInsert() : BEGIN');
         restrictTheProbLeave(newList);
         System.debug(LoggingLevel.DEBUG, 'restrictOnlyOneDayOnProbation.beforeInsert() : END');       
+    }
+    
+     public void beforeUpdate(List<EMS_LM_Leave_History__c> newList , List<EMS_LM_Leave_History__c> oldList) {      
+        System.debug(LoggingLevel.DEBUG, 'restrictOnlyOneDayOnProbation.beforeUpdate() : BEGIN');
+        restrictTheProbLeave(newList);
+        System.debug(LoggingLevel.DEBUG, 'restrictOnlyOneDayOnProbation.beforeUpdate() : END');       
     }
     
     
@@ -48,7 +54,8 @@ public class restrictOnlyOneDayOnProbation implements TriggerAction.BeforeInsert
         }
         
         for(Contact con : [SELECT Id,Resource_Role__c,Probationary_Period_End_Date__c,(SELECT Id,Leave_Type_Name__c,EMS_LM_Leave_Duration__c,EMS_LM_Leave_End_Date__c,EMS_LM_Leave_Start_Date__c FROM Leaves_History__r 
-                                      WHERE EMS_LM_Leave_End_Date__c = THIS_YEAR AND EMS_LM_Status__c != 'Cancelled' AND EMS_LM_Status__c != 'Rejected' ) 
+                                      WHERE EMS_LM_Leave_End_Date__c = THIS_YEAR AND EMS_LM_Status__c != 'Cancelled' AND EMS_LM_Status__c != 'Rejected' AND
+                                                                                      EMS_LM_Leave_Type__r.EMS_LM_Leave_Type__c !=:LeaveRequestConstant.WORK_FROM_HOME) 
                            FROM Contact WHERE Id IN:resourcId AND Probationary_Period_End_Date__c != null AND Probationary_Period_End_Date__c > Today]){
           contactMap.put(con.Id,con);  
         }
