--- a/force-app/main/default/classes/enableAndDisableBillableOnContactTest.cls
+++ b/force-app/main/default/classes/enableAndDisableBillableOnContactTest.cls
@@ -15,25 +15,33 @@
 public class enableAndDisableBillableOnContactTest {
     @testSetup
     public static void setUp(){
-        contact contactRec = new contact();
-        contactRec.LastName = 'rk';
-        contactRec.Official_Mail__c ='rama@rama.com';
-        contactRec.Phone = '9652901075';
-        contactRec.EMS_Phone_Number__c = '9652901075';
-        contactRec.RecordTypeId = ContactConstant.RESOURCE_RECORDTYPEID;
-        contactRec.EMS_EM_JD__c = system.today();
-        insert contactRec;
+        Resource_Role__c role = TestDataFactory.createResourceRole(true);
+          /* EMS_LM_Leave__c ee =TestDataFactory.createLeaveType(false);
+         ee.EMS_LM_Leave_Type__c ='Loss of Pay';
+         Insert ee;*/
+         EMS_LM_Leave__c annualtype = TestDataFactory.createLeaveType('Annual Leave',true);
+        EMS_LM_Leave__c loptype = TestDataFactory.createLeaveType('Loss of Pay',true);
+        EMS_LM_Leave__c bretype = TestDataFactory.createLeaveType('Maternity Leave',true);
+        EMS_LM_Leave__c compofftype = TestDataFactory.createLeaveType('Compensatory Off',true);
+        EMS_LM_Leave__c workfromhome = TestDataFactory.createLeaveType('Work From Home',true);
+         Account acc = TestDataFactory.createAccount(true);
+		 Contact con=  TestDataFactory.createResourceContact(acc.id, false);
+         con.EMS_RM_Employee_Id__c = 'CP10235';
+         con.Resource_Role__c = role.Id;
+         insert con;
+         User u = Testdatafactory.createCommunityUserWithAccAndContact(acc.id,con.Id,false);
         
         EMS_TM_Project__c projectRec = new EMS_TM_Project__c();
         projectRec.EMS_TM_StartDate__c = System.today();
+        projectRec.EMS_TM_EndDate__c = System.today()+20;
         projectRec.EMS_TM_Status__c = 'ongoing';
         projectRec.Name = 'project1';
-        projectRec.Project_Manager__c = contactRec.Id;
+        projectRec.Project_Manager__c = con.Id;
         projectRec.Type_Of_Project__c ='Client Projects';
         insert projectRec;
                 
         EMS_TM_Assignment__c assignmentRec = new EMS_TM_Assignment__c();
-        assignmentRec.EMS_TM_EmployeeName__c = contactRec.Id;
+        assignmentRec.EMS_TM_EmployeeName__c = con.Id;
         assignmentRec.EMS_TM_ProjectName_Asgn__c = projectRec.Id;
         assignmentRec.EMS_TM_StartDate_Asgn__c = system.today();
         assignmentRec.EMS_TM_Billable__c = true;
@@ -49,7 +57,7 @@ public class enableAndDisableBillableOnContactTest {
                                          EMS_TM_Status_Asgn__c,
                                          EMS_TM_Billable__c
                                          FROM EMS_TM_Assignment__c 
-                                         WHERE EMS_TM_EmployeeName__r.lastname  = 'rk' 
+                                         WHERE EMS_TM_EmployeeName__r.EMS_RM_Employee_Id__c  = 'CP10235' 
                                          LIMIT 1];
         									assignRec.EMS_TM_Billable__c = true;
                                             assignRec.EMS_TM_Status_Asgn__c='Active';
@@ -64,7 +72,7 @@ public class enableAndDisableBillableOnContactTest {
                             LastName,
                             EMS_TM_In_Billing__c 
                             FROM contact 
-                            WHERE lastname ='rk'
+                            WHERE EMS_RM_Employee_Id__c ='CP10235'
                             LIMIT 1];
         
         System.assertEquals(true, conRecord.EMS_TM_In_Billing__c );                
